--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,14 @@
 body {
-  background-color: #fafafa;
 }
 .container {
   max-width: 1400px;
   margin: 0 auto;
+}
+img {
+  width: 100%;
+}
+.text-center {
+  text-align: center;
 }
 section {
   max-width: 100%;
@@ -16,13 +21,98 @@ section {
 .grid-2-columns {
   grid-template-columns: 1fr 1fr;
 }
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+.grid-space {
+  grid-gap: 60px;
+}
 
 h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 45px;
 }
-
+.header-img {
+  border-radius: 20% 80% 29% 71% / 59% 26% 74% 41%;
+}
 .auto-type {
   font-family: "Lexend", sans-serif;
   color: #ff347f;
+}
+
+/* PROJECTS */
+h2 {
+  margin-bottom: 40px;
+  color: #ff347f;
+  font-family: "Lexend", sans-serif;
+  font-size: 30px;
+}
+h3 {
+  font-family: "Lexend", sans-serif;
+}
+p {
+  font-family: "Montserrat", sans-serif;
+}
+.blob-1 {
+  border-radius: 20% 80% 29% 71% / 59% 26% 74% 41%;
+  transition: 1s ease;
+}
+.blob-1:hover {
+  border-radius: 77% 23% 75% 25% / 41% 26% 74% 59%;
+}
+.blob-back-1 {
+  border-radius: 77% 23% 75% 25% / 41% 26% 74% 59%;
+  transition: 1s ease;
+  background-color: #afdbdb;
+}
+.blob-back-1:hover {
+  border-radius: 20% 80% 29% 71% / 59% 26% 74% 41%;
+}
+
+.blob-2 {
+  border-radius: 77% 23% 75% 25% / 41% 26% 74% 59%;
+  transition: 1s ease;
+}
+.blob-2:hover {
+  border-radius: 20% 80% 29% 71% / 59% 26% 74% 41%;
+}
+.blob-back-2 {
+  border-radius: 20% 80% 29% 71% / 59% 26% 74% 41%;
+  transition: 1s ease;
+  background-color: #afdbdb;
+}
+.blob-back-2:hover {
+  border-radius: 77% 23% 75% 25% / 41% 26% 74% 59%;
+}
+
+.blob-3 {
+  border-radius: 77% 23% 33% 67% / 41% 63% 37% 59%;
+  transition: 1s ease;
+}
+.blob-3:hover {
+  border-radius: 33% 67% 33% 67% / 66% 63% 37% 34%;
+}
+.blob-back-3 {
+  border-radius: 33% 67% 33% 67% / 66% 63% 37% 34%;
+  transition: 1s ease;
+  background-color: #afdbdb;
+}
+.blob-back-3:hover {
+  border-radius: 77% 23% 33% 67% / 41% 63% 37% 59%;
+}
+
+.blob-4 {
+  border-radius: 50% 50% 49% 51% / 42% 83% 17% 58%;
+  transition: 1s ease;
+}
+.blob-4:hover {
+  border-radius: 28% 72% 49% 51% / 51% 45% 55% 49%;
+}
+.blob-back-4 {
+  border-radius: 28% 72% 49% 51% / 51% 45% 55% 49%;
+  transition: 1s ease;
+  background-color: #afdbdb;
+}
+.blob-back-4:hover {
+  border-radius: 50% 50% 49% 51% / 42% 83% 17% 58%;
 }
