--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,10 @@
   opacity: 0.7;
   overflow: hidden;
 }
-
+body {
+  margin: 0;
+  padding: 0;
+}
 .container {
   max-width: 1400px;
   margin: 0 auto;
@@ -69,18 +72,19 @@ a {
 }
 /* ABOUT */
 .bio-img {
-  max-width: 400px;
+  max-width: 450px;
   display: block;
   margin: 0 auto;
 }
 .bio {
-  margin: 0px 30px;
+  margin: 60px 0px 0px 40px;
+  line-height: 1.5;
 }
 
 /* PROJECTS */
 
 h2 {
-  margin-bottom: 40px;
+  margin-bottom: 0px;
   color: #ff347f;
   font-family: "Lexend", sans-serif;
   font-size: 30px;
@@ -90,6 +94,9 @@ h3 {
 }
 p {
   font-family: "Montserrat", sans-serif;
+}
+.projects {
+  margin-top: 90px;
 }
 .blob-1 {
   border-radius: 20% 80% 29% 71% / 59% 26% 74% 41%;
@@ -158,7 +165,7 @@ p {
 .contact {
   border: 4px solid #eaf6f6;
   border-radius: 3px;
-  margin: 30px 350px;
+  margin: 60px 350px;
   padding: 0px 30px 20px 30px;
   align-items: center;
 }
@@ -185,4 +192,59 @@ h4 {
   font-family: "Montserrat", sans-serif;
   margin-top: 30px;
   margin-bottom: 20px;
+}
+/* CERTIFICATION */
+.shecodes {
+  margin: 50px 0px 0px 40px;
+  line-height: 1.5;
+}
+ul {
+  font-family: "Montserrat", sans-serif;
+  list-style-type: circle;
+}
+.shecodes-img {
+  display: block;
+  margin: 0 auto;
+  max-width: 480px;
+  margin-top: 40px;
+}
+/* FOOTER */
+footer {
+  background-color: #ff347e21;
+  margin-top: 80px;
+  width: 100%;
+  padding-top: 30px;
+}
+.grid-1-column {
+  grid-template-columns: 1fr;
+}
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+  display: flex;
+  justify-content: center;
+  grid-gap: 30px;
+  font-family: "Montserrat", sans-serif;
+  margin-top: 40px;
+  margin-left: 6px;
+  padding-bottom: 40px;
+}
+.footer-icons {
+  display: flex;
+  justify-content: center;
+  margin-right: 6px;
+}
+footer a {
+  opacity: 0.7;
+  transition: 0.5s;
+}
+footer a:hover {
+  opacity: 1;
+}
+.footer-bottom {
+  display: flex;
+  justify-content: center;
+  opacity: 0.7;
+  font-size: 12px;
+  background-color: #ff347e4d;
+  margin-left: 4px;
 }
