--- a/styles/index.css
+++ b/styles/index.css
@@ -53,7 +53,7 @@ button {
   transition: 0.5s ease-in-out;
 }
 .header-btn {
-  margin-top: 40px;
+  margin-top: 50px;
   border: 2px solid #afdbdb;
   background-color: #afdbdb;
 }
@@ -77,7 +77,7 @@ a {
   margin: 0 auto;
 }
 .bio {
-  margin: 60px 0px 0px 40px;
+  margin: 60px 0px 0px 70px;
   line-height: 1.5;
 }
 
@@ -85,6 +85,7 @@ a {
 
 h2 {
   margin-bottom: 0px;
+  margin-left: 30px;
   color: #ff347f;
   font-family: "Lexend", sans-serif;
   font-size: 30px;
@@ -97,6 +98,7 @@ p {
 }
 .projects {
   margin-top: 90px;
+  margin-left: 70px;
 }
 .blob-1 {
   border-radius: 20% 80% 29% 71% / 59% 26% 74% 41%;
@@ -195,7 +197,7 @@ h4 {
 }
 /* CERTIFICATION */
 .shecodes {
-  margin: 50px 0px 0px 40px;
+  margin: 50px 0px 0px 70px;
   line-height: 1.5;
 }
 ul {
@@ -246,4 +248,87 @@ footer a:hover {
   opacity: 0.7;
   font-size: 12px;
   background-color: #ff347e4d;
+}
+
+@media (max-width: 800px) {
+  h2 {
+    text-align: center;
+    margin-left: 0px;
+    margin-top: 60px;
+  }
+  .grid-2-columns {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+  .bio {
+    margin: 40px 70px 0px 70px;
+  }
+  .bio-img {
+    display: none;
+  }
+  .grid-4-columns {
+    grid-template-columns: 1fr 1fr;
+    margin: 90px 70px 0px 70px;
+  }
+  .contact {
+    margin: 30px 100px;
+  }
+  .contact-btn {
+    margin-top: 50px;
+  }
+  .shecodes {
+    margin: 40px 70px 0px 70px;
+  }
+  .exp {
+    grid-template-columns: 1fr 1fr;
+    list-style-type: none;
+  }
+}
+@media (max-width: 500px) {
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 25px;
+  }
+  h3 {
+    font-size: 16px;
+  }
+  p {
+    font-size: 14px;
+  }
+  h4 {
+    font-size: 20px;
+  }
+  button {
+    padding: 10px 10px;
+    font-size: 14px;
+  }
+  .exp {
+    font-size: 14px;
+  }
+  .grid-space {
+    grid-gap: 30px;
+  }
+  .shecodes-img {
+    max-width: 270px;
+  }
+  .grid-4-columns {
+    margin: 90px 50px 0px 50px;
+  }
+  .shecodes {
+    margin: 40px 50px 0px 50px;
+  }
+  .bio {
+    margin: 40px 50px 0px 50px;
+  }
+  .contact {
+    margin: 20px 80px;
+  }
+  .footer-nav {
+    font-size: 14px;
+  }
+  .name {
+    font-size: 10px;
+  }
 }
