--- a/styles/index.css
+++ b/styles/index.css
@@ -98,7 +98,7 @@ p {
 }
 .projects {
   margin-top: 90px;
-  margin-left: 70px;
+  margin: 70px;
 }
 .blob-1 {
   border-radius: 20% 80% 29% 71% / 59% 26% 74% 41%;
