--- a/styles/index.css
+++ b/styles/index.css
@@ -169,6 +169,22 @@ p {
 .blob-back-4:hover {
   border-radius: 50% 50% 49% 51% / 42% 83% 17% 58%;
 }
+
+.blob-5 {
+  border-radius: 47% 53% 55% 45% / 38% 30% 70% 62%;
+  transition: 1s ease;
+}
+.blob-5:hover {
+  border-radius: 18% 82% 30% 70% / 75% 30% 70% 25%;
+}
+.blob-back-5 {
+  border-radius: 18% 82% 30% 70% / 75% 30% 70% 25%;
+  transition: 1s ease;
+  background-color: #3a4750;
+}
+.blob-back-5:hover {
+  border-radius: 47% 53% 55% 45% / 38% 30% 70% 62%;
+}
 /* CONTACT */
 .contact {
   border: 4px solid #ffbd3971;
