--- a/styles/index.css
+++ b/styles/index.css
@@ -42,6 +42,7 @@ section {
   grid-gap: 60px;
 }
 /* HEADER */
+.emoji { font-size: 80px;}
 h1 {
   font-family: "Montserrat", sans-serif;
   font-size: 45px;
